--- a/login.html
+++ b/login.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title><Page Title></title>
+    <title>LOBIN PAGE </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>hello...!!</h1>
-    login form
+    <h2>login</h2>
 </body>
 </html>
